--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-template</title>
+    <title>OJT-project</title>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
