--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>OJT-project</title>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://kit.fontawesome.com/669748825c.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
