방삭제 미완성 시스템 메시지 개선

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>OJT-project</title>
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
     <script src="https://kit.fontawesome.com/669748825c.js" crossorigin="anonymous"></script>
   </head>
   <body>
