--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>OJT-project</title>
+    <title>OJT-gameweb</title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://kit.fontawesome.com/669748825c.js" crossorigin="anonymous"></script>
   </head>
